2003-04-09	ujwal

    * Preliminary support for print-to-ansi.
    
    * Incorporated French nib files into project.

2003-04-08	fabian
    * Added French localization provided by Matt Anton
    
2003-04-07	ujwal

    * Fixed a namespace collision bug in PTYTask.
    
    * Fixed linewrap bug in VT100Screen.

2003-04-05	ujwal

    * Fixed write problem when prompted for passwords.
    
    * Now explicitly setting PATH to something sensible 
      since the default includes the user's home directory.
    
    * Implemented ESC [?40h (allow 132<->80 column mode).
    
2003-04-02	ujwal

    * Fixed a problem that was causing iTerm to hang when 
      a large piece of text was being pasted.

2003-04-01	fabian
    * Fixed a bug in text input
    * Applied the URL parsing into ARRAY code
    * Added an indictor in About box to show if iTerm is
      build under ARRAY mode or BUFFER mode
    
2003-04-01	ujwal

    * Now dynamically displaying window size as window is 
      being resized.

2003-03-31	ujwal

    * Made URL parsing in PTYTextView slightly more 
      intelligent.

2003-03-30	ujwal

    * When dragging a text clipping onto iTerm, we 
      don't insert the file name of the clipping since 
      the contents are inserted.

2003-03-28	ujwal
    * Made addressbook non-modal.
    * Fixed a crash in showing preferences window.
    * Fixed bug in changing font for addressbook entries.

2003-03-28	fabian
    * Fixed bugs in selection
    * Fixed context menu
    * Fixed wrong setDirtyLine calls in VT100Screen
    * Fixed a bug in VT100Screen that causes duplicated lines
    * "Save as" now is working, we need a new print function
    * Fixed a crashing bug in "Save Config"
    * Fixed browse and mail in PTYTextView
    * Made selection invalid if text is changed
    
2003-03-27	ujwal

    * Protected some ARRAY specific code in #if USE_CUSTOM_DRAWING
      ...#endif so that BUFFER code does not crash.
      
    * Fixed bug in loading preferences nib.
      
